# Triangulum

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  index.html  params.json
cmake/modules/: FindEntityX.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake  FindYamlCpp.cmake
doxygen/: Doxyfile
doxygen/html/: _actor_8cpp_source.html  _actor_8h_source.html  _actor_id_8h_source.html  _component_8cpp_source.html  _component_8h_source.html  _game_8cpp_source.html  _game_8h_source.html  _key_handler_8cpp_source.html  _key_handler_8h_source.html  _motion_8cpp_source.html  _motion_8h_source.html  _movement_system_8cpp_source.html  _movement_system_8h_source.html  _player_control_system_8cpp_source.html  _player_control_system_8h_source.html  _player_motion_control_8cpp_source.html  _player_motion_control_8h_source.html  _position_8cpp_source.html  _position_8h_source.html  _r_e_a_d_m_e_8md_source.html  annotated.html  class_actor-members.html  class_actor.html  class_component-members.html  class_component.html  class_component__inherit__graph.map  class_component__inherit__graph.md5  class_game-members.html  class_game.html  class_key_handler-members.html  class_key_handler.html  class_motion-members.html  class_motion.html  class_motion__inherit__graph.map  class_motion__inherit__graph.md5  class_movement_system-members.html  class_movement_system.html  class_player_control_system-members.html  class_player_control_system.html  class_player_motion_control-members.html  (+46 more)
doxygen/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  classes_3.js  pages_0.js  search.js
include/: Actor.h  ActorId.h  Animation.h  AnimationFactory.h  AudioManager.h  EntityCreator.h  Game.h  GameManager.h  ICreatable.h  KeyHandler.h  Release.h  ScreenSize.h  SoundId.h  SpriteSheet.h
include/ai/: BaseAi.h  FirstBossAi.h  IAi.h  ShootAtPlayerAi.h  ShootAtPlayerWhenNearAi.h
include/components/: AbstractMenu.h  Ai.h  AiControl.h  Animation.h  Background.h  Bullet.h  Component.h  DeathSentence.h  Display.h  Enemy.h  Gun.h  Health.h  IMenu.h  Menu.h  Motion.h  Obstacle.h  PickUp.h  PlayerControl.h  PlayerMotionControl.h  Position.h  SpaceShip.h  State.h  Volume.h
include/graphics/: AsteroidBossView.h  Asteroidview.h  BackgroundView.h  BulletView.h  FontRepository.h  GameCompMenuView.h  GameOverMenuView.h  IAnimatible.h  IDrawable.h  LevelCompMenuView.h  PauseMenuView.h  ScoreView.h  SettingsMenuView.h  SpaceShipView.h  SplashScreen.h  StartMenuView.h
include/systems/: AiControlSystem.h  AnimationSystem.h  AudioSystem.h  BaseNode.h  BulletLifeTimeSystem.h  BulletType.h  CollisionSystem.h  DeathRowSystem.h  Events.h  GunSystem.h  HudSystem.h  LevelSystem.h  MenuSystem.h  MovementSystem.h  PickUpSystem.h  PlayerControlSystem.h  RenderSystem.h  StartMenuSystem.h
include/utils/: CollisionBox.h  HighScoreManager.h  LevelLoader.h  Math.h  TextTexture.h  Texture.h  Vector2.h
resources/levels/: level1.yaml  level2.yaml
resources/levels/LevelCreator/: levelCreator.py
src/: Actor.cpp  Animation.cpp  AnimationFactory.cpp  AudioManager.cpp  EntityCreator.cpp  Game.cpp  GameManager.cpp  KeyHandler.cpp  ResourcePath.cpp  ScreenSize.cpp  SpriteSheet.cpp  main.cpp
src/ai/: BaseAi.cpp  FirstBossAi.cpp  ShootAtPlayerAi.cpp  ShootAtPlayerWhenNearAi.cpp
src/components/: Ai.cpp  AiControl.cpp  Animation.cpp  Background.cpp  Bullet.cpp  Component.cpp  DeathSentence.cpp  Display.cpp  Enemy.cpp  Gun.cpp  Health.cpp  Menu.cpp  Motion.cpp  Obstacle.cpp  PickUp.cpp  PlayerControl.cpp  PlayerMotionControl.cpp  Position.cpp  SpaceShip.cpp  State.cpp  Volume.cpp
src/graphics/: AsteroidBossView.cpp  AsteroidView.cpp  Asteroidview.cpp  BackgroundView.cpp  BulletView.cpp  FontRepository.cpp  GameCompMenuView.cpp  GameOverMenuView.cpp  LevelCompMenuView.cpp  PauseMenuView.cpp  ScoreView.cpp  SettingsMenuView.cpp  SpaceShipView.cpp  SplashScreen.cpp  StartMenuView.cpp
src/systems/: AiControlSystem.cpp  AnimationSystem.cpp  AudioSystem.cpp  BaseNode.cpp  BulletLifeTimeSystem.cpp  BulletType.cpp  CollisionSystem.cpp  DeathRowSystem.cpp  GunSystem.cpp  HudSystem.cpp  LevelSystem.cpp  MenuSystem.cpp  MovementSystem.cpp  PickUpSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp  StartMenuSystem.cpp
src/utils/: CollisionBox.cpp  HighScoreManager.cpp  LevelLoader.cpp  Math.cpp  TextTexture.cpp  Texture.cpp  Vector2.cpp
tools/level_creator/: levelCreator.py
xcode/: ResourcePath.mm  Triangulum-Info.plist
xcode/Triangulum.xcodeproj/: project.pbxproj
xcode/Triangulum.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
xcode/Triangulum.xcodeproj/project.xcworkspace/xcshareddata/: Triangulum.xccheckout
xcode/Triangulum.xcodeproj/project.xcworkspace/xcuserdata/mikael.xcuserdatad/: UserInterfaceState.xcuserstate
xcode/Triangulum.xcodeproj/xcuserdata/mikael.xcuserdatad/xcschemes/: Triangulum.xcscheme  xcschememanagement.plist
